--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,22 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.example</groupId>
+    <groupId>com.JtChen</groupId>
     <artifactId>Swingtest</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>2.2.2</version>
     <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
 
+        <dependency>
+            <groupId>com.cc</groupId>
+            <artifactId>QQServer</artifactId>
+            <version>2.1.1</version>
+        </dependency>
     </dependencies>
 
     <properties>
@@ -18,65 +29,45 @@
         <maven.compiler.source>14</maven.compiler.source>
         <maven.compiler.target>14</maven.compiler.target>
     </properties>
+    <distributionManagement>
+        <repository>
+            <id>jtchen_hosted</id>
+            <url>http://localhost:8081/repository/jtchen_hosted/</url>
+        </repository>
 
-    <build>
-        <plugins>
+        <snapshotRepository>
+            <id>jtchen_group</id>
+            <url>http://localhost:8081/repository/jtchen_group/</url>
+        </snapshotRepository>
+    </distributionManagement>
 
-            <!--打包普通项目-->
-<!--            <plugin>-->
-<!--                <groupId></groupId>-->
-<!--                <artifactId>com.intellij.uiDesigner.core</artifactId>-->
-<!--                <version>20040703.133254</version>-->
-<!--                <configuration>-->
-<!--                    <archive>-->
-<!--                        <manifest>-->
-<!--                            &lt;!&ndash;这里要替换成jar包main方法所在类 &ndash;&gt;-->
-<!--                            <mainClass>Client</mainClass>-->
-<!--                        </manifest>-->
-<!--                        <manifestEntries>-->
-<!--                            &lt;!&ndash;上面指定类的路径&ndash;&gt;-->
-<!--                            <Class-Path>./src/main/java</Class-Path>-->
-<!--                        </manifestEntries>-->
-<!--                    </archive>-->
-
-<!--                    <descriptorRefs>-->
-<!--                        <descriptorRef>jar-with-dependencies</descriptorRef>-->
-<!--                    </descriptorRefs>-->
-<!--                </configuration>-->
-<!--                <executions>-->
-<!--                    <execution>-->
-<!--                        <id>make-assembly</id> &lt;!&ndash; this is used for inheritance merges &ndash;&gt;-->
-<!--                        <phase>package</phase> &lt;!&ndash; 指定在打包节点执行jar包合并操作 &ndash;&gt;-->
-<!--                        <goals>-->
-<!--                            <goal>single</goal>-->
-<!--                        </goals>-->
-<!--                    </execution>-->
-<!--                </executions>-->
-<!--            </plugin>-->
-
-            <!--打包Scala项目-->
-            <plugin>
-                <groupId>org.scala-tools</groupId>
-                <artifactId>maven-scala-plugin</artifactId>
-                <version>2.15.2</version>
-                <executions>
-                    <execution>
-                        <id>scala-compile-first</id>
-                        <goals>
-                            <goal>compile</goal>
-                        </goals>
-                        <configuration>
-                            <includes>
-                                <include>**/*.scala</include>
-                            </includes>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-
-
-        </plugins>
-    </build>
+<build>
+    <plugins>
+<!--        <plugin>-->
+<!--            <artifactId>maven-assembly-plugin</artifactId>-->
+<!--            <version>3.0.0</version>-->
+<!--            <configuration>-->
+<!--                <archive>-->
+<!--                    <manifest>-->
+<!--                        <mainClass>chatGUI</mainClass>-->
+<!--                    </manifest>-->
+<!--                </archive>-->
+<!--                <descriptorRefs>-->
+<!--                    <descriptorRef>jar-with-dependencies</descriptorRef>-->
+<!--                </descriptorRefs>-->
+<!--            </configuration>-->
+<!--            <executions>-->
+<!--                <execution>-->
+<!--                    <id>make-assembly</id> &lt;!&ndash; this is used for inheritance merges &ndash;&gt;-->
+<!--                    <phase>package</phase> &lt;!&ndash; bind to the packaging phase &ndash;&gt;-->
+<!--                    <goals>-->
+<!--                        <goal>single</goal>-->
+<!--                    </goals>-->
+<!--                </execution>-->
+<!--            </executions>-->
+<!--        </plugin>-->
+    </plugins>
+</build>
 </project>
 
 
