--- a/pom.xml
+++ b/pom.xml
@@ -15,11 +15,11 @@
             <scope>test</scope>
         </dependency>
 
-<!--        <dependency>
+       <dependency>
             <groupId>com.cc</groupId>
             <artifactId>QQServer</artifactId>
             <version>2.1.2</version>
-        </dependency>-->
+        </dependency>
        <!--  https://mvnrepository.com/artifact/com.formdev/flatlaf -->
         <dependency>
             <groupId>com.formdev</groupId>
@@ -44,12 +44,12 @@
     <distributionManagement>
         <repository>
             <id>jtchen_hosted</id>
-            <url>http://192.168.1.202:8081/repository/jtchen_hosted/</url>
+            <url>http://localhost:8081/repository/jtchen_hosted/</url>
         </repository>
 
         <snapshotRepository>
             <id>jtchen_group</id>
-            <url>http://192.168.1.202:8081/repository/jtchen_group/</url>
+            <url>http://localhost:8081/repository/jtchen_group/</url>
         </snapshotRepository>
     </distributionManagement>
 
